--- a/CustomRPC/UpdatePrompt.da.resx
+++ b/CustomRPC/UpdatePrompt.da.resx
@@ -121,20 +121,20 @@
     <value>Ja</value>
   </data>
   <data name="buttonNotNow.Text" xml:space="preserve">
-    <value>Ikke nu</value>
+    <value>Ikke Nu</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
     <value>182, 14</value>
   </data>
   <data name="labelQuestion.Text" xml:space="preserve">
-    <value>Vil du hente denne opdatering?</value>
+    <value>Ønsker du at hente denne opdatering?</value>
   </data>
   <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
     <value>194, 18</value>
   </data>
   <data name="checkBoxNeverNotify.Text" xml:space="preserve">
-    <value>Ikke tjek for opdateringer igen</value>
+    <value>Tjek ikke for opdateringer igen</value>
   </data>
   <data name="labelVersionsText.Text" xml:space="preserve">
     <value>Nuværende version:
