--- a/CustomRPC/Strings.hi.resx
+++ b/CustomRPC/Strings.hi.resx
@@ -181,4 +181,7 @@
   <data name="errorInvalidImageURL" xml:space="preserve">
     <value>छवि URL बहुत लंबा है!</value>
   </data>
+  <data name="errorStartupShortcut" xml:space="preserve">
+    <value>स्टार्टअप शॉर्टकट जोड़ने या निकालने में विफल रहा</value>
+  </data>
 </root>
