--- a/CustomRPC/MainForm.ar.resx
+++ b/CustomRPC/MainForm.ar.resx
@@ -182,7 +182,7 @@
     <value>222, 22</value>
   </data>
   <data name="quitToolStripMenuItem.Text" xml:space="preserve">
-    <value>اطلع</value>
+    <value>إغلاق</value>
   </data>
   <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>42, 20</value>
@@ -263,7 +263,7 @@
     <value>183, 22</value>
   </data>
   <data name="openTheManualToolStripMenuItem.Text" xml:space="preserve">
-    <value>افتح الإرشادات</value>
+    <value>افتح دليل المستخدم</value>
   </data>
   <data name="gitHubPageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>183, 22</value>
