--- a/CustomRPC/Strings.de-CH.resx
+++ b/CustomRPC/Strings.de-CH.resx
@@ -128,7 +128,7 @@
 Klick "Ja" zum nomal versuäche oder "nei" zum manuel abeladä.</value>
   </data>
   <data name="firstTimeRun" xml:space="preserve">
-    <value>Erste lauf</value>
+    <value>Brusch hilf?</value>
   </data>
   <data name="firstTimeRunText" xml:space="preserve">
     <value>Möchtisch du s handbuäch öffne?
